--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-leaflet/core": "^3.0.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "bootstrap-icons": "^1.13.1",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^15.6.1",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
