--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "bootstrap-icons": "^1.13.1",
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "i18next": "^25.3.5",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^19.1.1",
+    "react-flatpickr": "^4.0.11",
     "react-i18next": "^15.6.1",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
