--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "@react-leaflet/core": "^3.0.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.11.0",
     "bootstrap-icons": "^1.13.1",
     "flatpickr": "^4.6.13",
@@ -21,11 +25,9 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^19.1.1",
-    "react-autosuggest": "^10.1.0",
     "react-dom": "^19.1.1",
     "react-flatpickr": "^4.0.11",
     "react-i18next": "^15.6.1",
-    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
@@ -34,9 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.10",
-    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
