--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "i18next": "^25.3.5",
     "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -32,12 +33,14 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
     "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/leaflet": "^1.9.20",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
